Update styling for header, home

--- a/badminton/src/header.css
+++ b/badminton/src/header.css
@@ -1,9 +1,9 @@
 .header-container {
     text-align: center;
     padding: 48px;
-    background-color: #6A3636;
+    background-color: #F0A16A;
 }
 
 .headline {
-    color: #F0ECF0;
+    color: #F7F5F7;
 }
