--- a/badminton/src/index.css
+++ b/badminton/src/index.css
@@ -1,5 +1,7 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    background-color: #F7F8F8;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    margin: 0 auto;
 }
